HU-11:realizar pedido